--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Context-Preserve
 
 {{$NEXT}}
+        - fix copyright in metadata and pod (thanks dam)
 
 0.02      2017-05-11 13:28:50Z
         - convert packaging to Dist::Zilla, resolving RT#120824
