--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Context-Preserve
 
+{{$NEXT}}
+
 0.03      2017-11-03 19:55:47Z
         - fix copyright in metadata and pod (thanks dam)
 
