--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Context::Preserve - Run code after a subroutine call, preserving the context the
 
 =head1 VERSION
 
-version 0.02
+version 0.03
 
 =head1 SYNOPSIS
 
@@ -124,23 +124,23 @@ Jonathan Rockway <jrockway@cpan.org>
 
 =head1 CONTRIBUTORS
 
-=for stopwords Jonathan Rockway Karen Etheridge
+=for stopwords Karen Etheridge Jonathan Rockway
 
 =over 4
 
 =item *
 
-Jonathan Rockway <jon@jrock.us>
+Karen Etheridge <ether@cpan.org>
 
 =item *
 
-Karen Etheridge <ether@cpan.org>
+Jonathan Rockway <jon@jrock.us>
 
 =back
 
 =head1 COPYRIGHT AND LICENCE
 
-This software is copyright (c) 2007 by Jonathan Rockway.
+This software is copyright (c) 2008 by Infinity Interactive.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
